# acadmaster

./: .gitignore  .gitmodules  Cargo.toml  Main.tsx  Makefile  build.rs  go.sum  index.d.ts  index.html  main.go  package.json  tauri.conf.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: node.js.yml  npm-grunt.yml
app/: db.go  handlers.go  models.go
components/: Header.tsx  Menu.tsx  SideBar.tsx  StatusBar.tsx  index.ts
components/Header/: Header.css  Header.tsx
components/Menu/: Menu.tsx
components/SideBar/: SideBar.css  SideBar.tsx
components/Statusbar/: Statusbar.tsx  index.ts
components/Toolbar/: Toolbar.css  Toolbar.tsx
components/css/: SideBar.css
containers/: App.tsx  Assistant.tsx  Calender.tsx  Event.tsx  Extras.tsx  Home.tsx  Index.css  Main.tsx  Settings.tsx  Splash.tsx  Staff.tsx  Student.tsx  Teacher.tsx  index.ts
containers/Signin/: Signin.tsx
containers/Teacher/: Teacher.tsx
containers/account/: Account.tsx
containers/app/: App.css  App.tsx
containers/css/: Account.css  Settings.css  Splash.css  Student.css  Teacher.css
containers/settings/: Settings.tsx
containers/splash/: Splash.tsx  index.ts
containers/student/: Student.tsx
pages/: Splash.tsx  index.ts
pages/css/: Splash.css
service/include/: acadserver.h  common.h
service/src/: Acadserver.cpp  Service.cpp
src/: main.rs  settings.rs  utils.rs
utils/: index.ts
