[package]
version = "0.1.0"
license = ""
edition = "2021"
build = "build.rs"
name = "acadmaster"
authors = ["Cowan K. Wekesa"]
repository = "https://github.com/cowanweks/acadmaster"
description = "AcadMaster"


[dependencies]
winapi = "0.3.9"
tauri = { version = "1.3", features = [ "window-minimize", "window-show", "window-unminimize", "window-unmaximize", "window-maximize", "window-hide", "window-start-dragging", "window-close", "app-show"] }
tauri-plugin-window-state = "0.1"
window-vibrancy = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1.11"
tauri-build = { version = "1.3", features = [] }

[profile.release]
strip = true
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "z"   # Optimize for binary size

[features]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.winres]
OriginalFilename = "AcadMaster.exe"
LegalCopyright = "Copyright © 2023"
ProductVersion = "0.1.0"
ProductName = "AcadMaster"
Type = "Application"
FileDescription = "AcadMaster"
